gobmkida/g2/safe_move
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/safe_move/src/engine/reading.c:5003:7: error: use of undeclared identifier 'initialized_0'
if ( !initialized_0 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/safe_move/src/engine/reading.c:5012:1: error: use of undeclared identifier 'initialized_0'
initialized_0 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/safe_move/src/obj/1/reading.o] Error 1
